fixed some spacing issues on contact page

--- a/contact-us.css
+++ b/contact-us.css
@@ -1,10 +1,10 @@
 
 .contact-container {
   width: 80%;
-  margin: 100px auto;
+  margin: 50px auto;
   background-color: rgba(59, 59, 59, 0.15);
   border-radius: 40px;
-  padding: 40px 20px;
+  padding: 20px 20px;
 }
 
 .map-container {
@@ -12,7 +12,8 @@
   height: 400px;
   border-radius: 20px;
   overflow: hidden;
-  margin-bottom: 30px;
+margin-bottom: 10px;
+
 }
 
 .map-container iframe {
@@ -42,3 +43,4 @@
     height: 300px;
   }
 }
+
