--- a/style.css
+++ b/style.css
@@ -146,8 +146,9 @@ body.preload {
   width: 100%;
   border: 1px solid #444;
   padding-top: 10px;
-  margin-bottom: 200px;
+  margin-bottom: 10px; 
 }
+
 
 .futuristic-input {
   background-color: #0d0d0d;
